feat: endpoint implementation post-games-id-saves-manual
